--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,21 @@
     height: 400px;
     background: url("./img/main_banner.jpg") center / cover no-repeat;
 }
+
+.sub-banner {
+    width: 100%;
+}
+
+.sub-banner .item {
+    background: #eee;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
+.sub-banner .item img {
+    margin: 0 auto;
+    width: 100%;
+    height: 100px;
+    max-width: 200px;
+    object-fit: cover;
+}
