--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+a {
+    color: currentColor;
+    text-decoration: none;
+}
+.navbar {
+    /* color: #fff; */
+}
+
 .main-banner {
     width: 100%;
     height: 400px;
@@ -9,13 +17,14 @@
 }
 
 .sub-banner .item {
+    padding: 30px;
     background: #eee;
     border: 1px solid #ddd;
     text-align: center;
 }
 
 .sub-banner .item img {
-    margin: 0 auto;
+    margin: 0 auto 10px;
     width: 100%;
     height: 100px;
     max-width: 200px;
