--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,53 @@ a {
     max-width: 200px;
     object-fit: cover;
 }
+
+.loading {
+    display: block;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 9000;
+}
+
+.loading-wrap {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading-wheel {
+    display: block;
+    width: 130px;
+    height: 130px;
+    background: transparent;
+    border: 15px double #fff;
+    border-radius: 100px;
+    border-top-color: pink;
+    border-bottom-color: skyblue;
+
+    animation-name: wheel;
+    animation-duration: 1.3s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes wheel {
+    0% {
+        transform: rotate(0deg);
+    }
+    30% {
+        border-top-color: palegoldenrod;
+        border-bottom-color: palegreen;
+    }
+    80% {
+        transform: rotate(360deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
