탭 페이드 in out CSS, context api 예시

--- a/src/App.css
+++ b/src/App.css
@@ -80,3 +80,12 @@ a {
         transform: rotate(360deg);
     }
 }
+
+.start {
+    opacity: 0;
+}
+
+.end {
+    opacity: 1;
+    transition: opacity 0.3s;
+}
